--- a/A3/A3/packages.config
+++ b/A3/A3/packages.config
@@ -1,6 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="EMGU.CV" version="3.4.1.2976" targetFramework="net461" />
   <package id="RestSharp" version="106.4.2" targetFramework="net461" />
   <package id="WebSocketSharp" version="1.0.3-rc11" targetFramework="net461" />
   <package id="websocket-sharp.clone" version="3.0.0" targetFramework="net461" />
+  <package id="ZedGraph" version="5.1.7" targetFramework="net461" />
 </packages>
