--- a/A3/A3.csproj
+++ b/A3/A3.csproj
@@ -54,6 +54,9 @@
     <Reference Include="DirectShowLib-2005">
       <HintPath>..\packages\DirectShowLib-V2.1\lib\DirectShowLib-2005.dll</HintPath>
     </Reference>
+    <Reference Include="KeystrokeAPI">
+      <HintPath>packages\KeystrokeAPI\KeystrokeAPI.dll</HintPath>
+    </Reference>
     <Reference Include="RestSharp, Version=106.4.2.0, Culture=neutral, PublicKeyToken=598062e77f915f75, processorArchitecture=MSIL">
       <HintPath>..\packages\RestSharp.106.4.2\lib\net452\RestSharp.dll</HintPath>
     </Reference>
