--- a/A3/A3/packages.config
+++ b/A3/A3/packages.config
@@ -1,7 +1,14 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="EMGU.CV" version="3.4.1.2976" targetFramework="net461" />
+  <package id="KeystrokeAPI" version="1.0.6.4" targetFramework="net461" />
   <package id="RestSharp" version="106.4.2" targetFramework="net461" />
+  <package id="System.Reactive" version="4.3.2" targetFramework="net461" />
+  <package id="System.Runtime.CompilerServices.Unsafe" version="4.5.2" targetFramework="net461" />
+  <package id="System.Threading.Channels" version="4.7.0" targetFramework="net461" />
+  <package id="System.Threading.Tasks.Extensions" version="4.5.3" targetFramework="net461" />
+  <package id="System.ValueTuple" version="4.5.0" targetFramework="net461" />
+  <package id="Websocket.Client" version="4.1.85" targetFramework="net461" />
   <package id="WebSocketSharp" version="1.0.3-rc11" targetFramework="net461" />
   <package id="websocket-sharp.clone" version="3.0.0" targetFramework="net461" />
   <package id="ZedGraph" version="5.1.7" targetFramework="net461" />
